--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ waka_16525f21-b253-4381-89bd-d5fb148c5846 }}
-          GH_TOKEN: ${{ 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 }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
